Fix ID mismatch for Output corner in HTML and CSS for consistency

--- a/style.css
+++ b/style.css
@@ -1,10 +1,17 @@
-.Container
+#Container
 {
-    background-color: bisque;
+
+    background-color: blueviolet;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     height: 100vh;
     background-image:url(map.jpghttps://www.vecteezy.com/vector-art/20833849-world-map-with-country-names);
+}
+#Outputcorner{
+    background-color: turquoise;
+    display: flex;
+    flex-direction: column; 
+
 }
