Fix background image URL and remove unnecessary background color from Container

--- a/style.css
+++ b/style.css
@@ -1,13 +1,11 @@
 #Container
 {
-
-    background-color: blueviolet;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-image:url(map.jpghttps://www.vecteezy.com/vector-art/20833849-world-map-with-country-names);
+    background-image: url("map.jpg");
 }
 #Outputcorner{
     background-color: turquoise;
