--- a/style.css
+++ b/style.css
@@ -5,11 +5,51 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-image: url("map.jpg");
+    background-image: url("map\ 2.jpg");
 }
 #Outputcorner{
-    background-color: turquoise;
+    background-color: rgb(36, 58, 56);
     display: flex;
     flex-direction: column; 
+    padding: 330px;
+
+}
+#box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+    padding: 200px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);}
+
+input{
+    margin: 10px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    width: 200px;
+}
+label{
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+#No{display: flex;
+flex-direction:column;
+justify-content: center;
+align-items: center;
+background-color: rgb(241, 237, 236);}
+
+.p
+{font-size: large;
+font-weight: 100;
+font-style: italic;}
+
+
+
+
+
 
 }
